# internal/api/storage/postgres/subscriptions.go
@@ -8,11 +8,10 @@ import (
 
 type (
 	Plan struct {
-		Name              string    `pg:"sbs_name" json:"name"`
-		RequestsPerSecond int64     `pg:"sbs_request_per_second" json:"requests_per_second"`
-		TokenLimit        int64     `pg:"sbs_tokens_limit" json:"token_limit"`
-		Priority          int64     `pg:"sbs_priority" json:"priority"`
-		CreatedAt         time.Time `pg:"sbs_created_at" json:"-"`
+		Name       string    `pg:"sbs_name" json:"name"`
+		TokenLimit int64     `pg:"sbs_tokens_limit" json:"token_limit"`
+		Priority   int64     `pg:"sbs_priority" json:"priority"`
+		CreatedAt  time.Time `pg:"sbs_created_at" json:"-"`
 	}
 )
 
@@ -21,7 +20,7 @@ const (
 )
 
 func (s *Storage) GetSubscriptionsList(ctx context.Context) (subscriptions []Plan, err error) {
-	query := `SELECT sbs_priority, sbs_name, sbs_request_per_second, sbs_tokens_limit, sbs_created_at
+	query := `SELECT sbs_priority, sbs_name, sbs_tokens_limit, sbs_created_at
 				FROM subscriptions`
 	_, err = s.db.QueryContext(ctx, &subscriptions, query)
 	if err != nil {
